--- a/project.properties
+++ b/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=Google Inc.:Google APIs:17
-android.library.reference.1=SlidingMenu/library
+android.library.reference.1=../SlidingMenu/library
