--- a/project.properties
+++ b/project.properties
@@ -13,3 +13,4 @@
 # Project target.
 target=Google Inc.:Google APIs:17
 android.library.reference.1=../SlidingMenu/library
+android.library.reference.2=../StickyListHeaders/library
