--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -30,6 +30,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".TorrentListActivity" />
         </activity>
+        <activity
+            android:name="us.supositi.gearshift.Preferences"
+            android:label="@string/settings">
+        </activity>
     </application>
 
 </manifest>
