--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="us.supositi.gearshift"
+    package="org.sugr.gearshift"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="us.supositi.gearshift.TorrentListActivity"
+            android:name="org.sugr.gearshift.TorrentListActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,7 +25,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="us.supositi.gearshift.TorrentDetailActivity"
+            android:name="org.sugr.gearshift.TorrentDetailActivity"
             android:label="@string/title_torrent_detail"
             android:parentActivityName=".TorrentListActivity" >
             <meta-data
@@ -33,9 +33,9 @@
                 android:value=".TorrentListActivity" />
         </activity>
         <activity
-            android:name="us.supositi.gearshift.SettingsActivity"
+            android:name="org.sugr.gearshift.SettingsActivity"
             android:label="@string/settings"
-            android:parentActivityName="us.supositi.gearshift.TorrentListActivity">
+            android:parentActivityName="org.sugr.gearshift.TorrentListActivity">
             <intent-filter>
 		        <action android:name="android.intent.action.MANAGE_NETWORK_USAGE" />
 		        <category android:name="android.intent.category.DEFAULT" />
