--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,6 +24,13 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="magnet" />
+                <data android:mimeType="application/x-bittorrent" />
+            </intent-filter>
         </activity>
         <activity
             android:name="org.sugr.gearshift.TorrentDetailActivity"
