--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,8 +29,13 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
                 <data android:scheme="magnet" />
-                <data android:mimeType="application/x-bittorrent" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:mimeType="application/x-bittorrent" />
+            </intent-filter>            
         </activity>
         <activity
             android:name="org.sugr.gearshift.TorrentDetailActivity"
