--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,7 @@
     android:installLocation="preferExternal"
     package="org.sugr.gearshift"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="0.9 Beta" >
 
     <uses-sdk
         android:minSdkVersion="15"
