--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,8 +23,7 @@
         android:icon="@drawable/ic_launcher"
         android:logo="@drawable/ic_home"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:backupAgent=".GearShiftBackupAgent" >
+        android:theme="@style/AppTheme" >
         <activity
             android:name="org.sugr.gearshift.TorrentListActivity"
             android:label="@string/app_name"
