add a new activity to handle view intents

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,7 +10,6 @@
         android:targetSdkVersion="17" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_ALL_DOWNLOADS"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <supports-screens android:smallScreens="false"
@@ -37,13 +36,18 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
                 <data android:scheme="magnet" />
-            </intent-filter>
+            </intent-filter>         
+        </activity>
+        <activity
+            android:name=".TorrentFileReadActivity"
+            android:label="@string/title_torrent_file_read"
+            android:theme="@style/AppTheme.DialogNoTitle">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
                 <data android:mimeType="application/x-bittorrent" />
-            </intent-filter>            
+            </intent-filter>   
         </activity>
         <activity
             android:name=".TorrentDetailActivity"
