--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,15 @@ buildscript {
 }
 apply plugin: 'android'
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
+    compile files('libs/gson-2.2.2.jar')
+    compile files('libs/android-support-v4.jar')
+    // r7 doesn't have the DrawerLayout
+    // compile 'com.google.android:support-v4:r7'
 }
 
 android {
