--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.4'
+        classpath 'com.android.tools.build:gradle:0.5.+'
     }
 }
 apply plugin: 'android'
@@ -13,10 +13,10 @@ repositories {
 }
 
 dependencies {
-    compile files('libs/gson-2.2.2.jar')
-    compile files('libs/android-support-v4.jar')
-    // r7 doesn't have the DrawerLayout
-    // compile 'com.google.android:support-v4:r7'
+    // compile files('libs/gson-2.2.2.jar')
+    // compile files('libs/android-support-v4.jar')
+    compile 'com.android.support:support-v4:13.0.+'
+    compile 'com.google.code.gson:gson:2.2.4'
 }
 
 android {
