refactor the profile preferences
store them in a single file
preserve the directory list contents on orientation change
show the profile changes in the settings activity

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,7 +18,7 @@
 
     <application
         android:allowBackup="true"
-        android:backupAgent="org.sugr.gearshift.GearShiftBackupAgent"
+        android:backupAgent=".BackupAgent"
         android:restoreAnyVersion="true"
         android:icon="@drawable/ic_launcher"
         android:logo="@drawable/ic_home"
