try to free the detail activity on low memory
introduce a beta release without proguard

--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ android {
 
     signingConfigs {
         release
+        beta
     }
 
     buildTypes {
@@ -54,6 +55,13 @@ android {
             runProguard true
             proguardFile getDefaultProguardFile('proguard-android.txt')
             proguardFile 'proguard-project.txt'
+        }
+        beta {
+            debuggable true
+            jniDebugBuild true
+            signingConfig signingConfigs.beta
+
+            runProguard false
         }
     }
 }
@@ -68,4 +76,14 @@ if ('assemble' in runTasks || 'assembleRelease' in runTasks || 'aR' in runTasks)
     android.signingConfigs.release.keyAlias = "gearshift"
     android.signingConfigs.release.keyPassword = keyPass
     android.buildTypes.release.signingConfig = android.signingConfigs.release
+}
+if ('assembleBeta' in runTasks || 'aB' in runTasks) {
+    def storePass = System.env.STORE_PASS ?: new String(System.console().readPassword('\nKeyStore Password: '))
+    def keyPass = System.env.KEY_PASS ?: new String(System.console().readPassword('Alias Password: '))
+
+    android.signingConfigs.beta.storeFile = file('/home/urandom/.android/sugr.keystore')
+    android.signingConfigs.beta.storePassword = storePass
+    android.signingConfigs.beta.keyAlias = "gearshift"
+    android.signingConfigs.beta.keyPassword = keyPass
+    android.buildTypes.beta.signingConfig = android.signingConfigs.beta
 }
