--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     // compile files('libs/android-support-v4.jar')
     compile 'com.android.support:support-v4:18.0.+'
     compile 'com.google.code.gson:gson:2.2.4'
+    compile 'net.minidev:json-smart:1.2'
 }
 
 android {
