remove json-smart. too slow
have to use jackson instead of gson first

--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,10 @@ dependencies {
     // compile files('libs/android-support-v4.jar')
     compile 'com.android.support:support-v4:18.0.+'
     compile 'com.google.code.gson:gson:2.2.4'
-    compile 'net.minidev:json-smart:1.2'
+
+    /* compile 'com.fasterxml.jackson.core:jackson-core:2.3.0' */
+    /* compile 'com.fasterxml.jackson.core:jackson-databind:2.3.0' */
+    /* compile 'com.fasterxml.jackson.core:jackson-annotations:2.3.0' */
 }
 
 android {
