--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,7 @@ android {
             jniDebugBuild false
             signingConfig signingConfigs.release
 
-            runProguard true
+            runProguard false
             proguardFile getDefaultProguardFile('proguard-android.txt')
             proguardFile 'proguard-project.txt'
         }
