--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,6 +23,7 @@
         android:restoreAnyVersion="true"
         android:icon="@drawable/ic_launcher"
         android:logo="@drawable/ic_home"
+        android:name=".GearShiftApplication"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
