check whether the manager exists before issuing an update
dont die on errors in the gradle build

--- a/gearshift/build.gradle
+++ b/gearshift/build.gradle
@@ -26,6 +26,12 @@ android {
             zipAlign true
         }
     }
+    lintOptions {
+          checkReleaseBuilds true
+          // Or, if you prefer, you can continue to check for errors in release builds,
+          // but continue the build even when errors are found:
+          abortOnError false
+      }
 }
 
 dependencies {
