consume the indent immediately if the last activity is less than 30 seconds ago

--- a/gearshift/src/main/AndroidManifest.xml
+++ b/gearshift/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
 
     <application
         android:allowBackup="true"
+        android:name=".GearShiftApplication"
         android:backupAgent=".BackupAgent"
         android:restoreAnyVersion="true"
         android:icon="@drawable/ic_launcher"
