experiment with proguard again

--- a/gearshift/build.gradle
+++ b/gearshift/build.gradle
@@ -21,7 +21,7 @@ android {
     buildTypes {
         release {
             signingConfig signingConfigs.release
-            runProguard false
+            runProguard true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
             zipAlign true
         }
