--- a/gearshift/build.gradle
+++ b/gearshift/build.gradle
@@ -31,6 +31,7 @@ android {
           // Or, if you prefer, you can continue to check for errors in release builds,
           // but continue the build even when errors are found:
           abortOnError false
+          disable 'MissingTranslation'
       }
 }
 
