--- a/gearshift/build.gradle
+++ b/gearshift/build.gradle
@@ -1,5 +1,17 @@
 apply plugin: 'android'
 
+sourceSets {
+    unitTest {
+        java.srcDir file('src/androidTest/java')
+        resources.srcDir file('src/androidTest/res')
+    }
+}
+
+configurations {
+    unitTestCompile.extendsFrom runtime
+    unitTestRuntime.extendsFrom unitTestCompile
+}
+
 android {
     compileSdkVersion 19
     buildToolsVersion '19.0.1'
@@ -32,15 +44,40 @@ android {
           // but continue the build even when errors are found:
           abortOnError false
           disable 'MissingTranslation'
-      }
+    }
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:18.0.+'
+    compile 'com.android.support:support-v4:19.0.+'
     compile 'com.fasterxml.jackson.core:jackson-core:2.3.0'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.3.0'
     compile 'com.fasterxml.jackson.core:jackson-annotations:2.3.0'
+
+    unitTestCompile files("$project.buildDir/classes/release")
+    unitTestCompile 'junit:junit:4.8.2'
+    unitTestCompile 'org.robolectric:robolectric:2.1'
+    unitTestCompile 'com.google.android:android:4.1.1.4'
+    unitTestCompile 'com.android.support:support-v4:19.0.+'
+    unitTestCompile 'org.mockito:mockito-all:1.9.5'
+    unitTestCompile 'com.fasterxml.jackson.core:jackson-core:2.3.0'
+    unitTestCompile 'com.fasterxml.jackson.core:jackson-databind:2.3.0'
+    unitTestCompile 'com.fasterxml.jackson.core:jackson-annotations:2.3.0'
+
+    androidTestCompile 'junit:junit:4.8.2'
+    androidTestCompile 'org.robolectric:robolectric:2.1'
+    androidTestCompile 'com.google.android:android:4.1.1.4'
+    androidTestCompile 'com.android.support:support-v4:19.0.+'
+    androidTestCompile 'org.mockito:mockito-all:1.9.5'
+    androidTestCompile 'com.fasterxml.jackson.core:jackson-core:2.3.0'
+    androidTestCompile 'com.fasterxml.jackson.core:jackson-databind:2.3.0'
+    androidTestCompile 'com.fasterxml.jackson.core:jackson-annotations:2.3.0'
 }
+
+task unitTest(type:Test, dependsOn: assembleDebug) {
+    testClassesDir = project.sourceSets.unitTest.output.classesDir
+    classpath = project.sourceSets.unitTest.runtimeClasspath
+}
+check.dependsOn unitTest
 
 def runTasks = gradle.startParameter.taskNames
 if ('assemble' in runTasks || 'assembleRelease' in runTasks || 'aR' in runTasks) {
