--- a/gearshift/build.gradle
+++ b/gearshift/build.gradle
@@ -1,17 +1,5 @@
 apply plugin: 'android'
 
-sourceSets {
-    unitTest {
-        java.srcDir file('src/androidTest/java')
-        resources.srcDir file('src/androidTest/resources')
-    }
-}
-
-configurations {
-    unitTestCompile.extendsFrom runtime
-    unitTestRuntime.extendsFrom unitTestCompile
-}
-
 android {
     compileSdkVersion 19
     buildToolsVersion '19.1'
@@ -21,6 +9,7 @@ android {
         targetSdkVersion 19
         versionCode 62
         versionName "0.9.62"
+        packageName "org.sugr.gearshift"
     }
 
     compileOptions {
@@ -47,37 +36,24 @@ android {
     }
 }
 
+apply plugin: 'android-unit-test'
+
 dependencies {
     compile 'com.android.support:support-v4:19.1.+'
     compile 'com.fasterxml.jackson.core:jackson-core:2.3.0'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.3.0'
     compile 'com.fasterxml.jackson.core:jackson-annotations:2.3.0'
 
-    unitTestCompile files("$project.buildDir/classes/debug")
-    unitTestCompile 'junit:junit:4.8.2'
-    unitTestCompile 'org.robolectric:robolectric:2.3'
-    unitTestCompile 'com.google.android:android:4.1.1.4'
-    unitTestCompile 'com.android.support:support-v4:19.1.+'
-    unitTestCompile 'org.mockito:mockito-all:1.9.5'
-    unitTestCompile 'com.fasterxml.jackson.core:jackson-core:2.3.0'
-    unitTestCompile 'com.fasterxml.jackson.core:jackson-databind:2.3.0'
-    unitTestCompile 'com.fasterxml.jackson.core:jackson-annotations:2.3.0'
-
-    androidTestCompile 'junit:junit:4.8.2'
-    androidTestCompile 'org.robolectric:robolectric:2.3'
-    androidTestCompile 'com.google.android:android:4.1.1.4'
-    androidTestCompile 'com.android.support:support-v4:19.1.+'
-    androidTestCompile 'org.mockito:mockito-all:1.9.5'
-    androidTestCompile 'com.fasterxml.jackson.core:jackson-core:2.3.0'
-    androidTestCompile 'com.fasterxml.jackson.core:jackson-databind:2.3.0'
-    androidTestCompile 'com.fasterxml.jackson.core:jackson-annotations:2.3.0'
+    testCompile files("$project.buildDir/classes/debug")
+    testCompile 'junit:junit:4.8.2'
+    testCompile 'org.robolectric:robolectric:2.3'
+    testCompile 'com.google.android:android:4.1.1.4'
+    testCompile 'com.android.support:support-v4:19.1.+'
+    testCompile 'org.mockito:mockito-all:1.9.5'
+    testCompile 'com.fasterxml.jackson.core:jackson-core:2.3.0'
+    testCompile 'com.fasterxml.jackson.core:jackson-databind:2.3.0'
+    testCompile 'com.fasterxml.jackson.core:jackson-annotations:2.3.0'
 }
-
-task unitTest(type:Test, dependsOn: assembleDebug) {
-    testClassesDir = project.sourceSets.unitTest.output.classesDir
-    classpath = project.sourceSets.unitTest.runtimeClasspath
-}
-check.dependsOn unitTest
 
 def runTasks = gradle.startParameter.taskNames
 if ('assemble' in runTasks || 'assembleRelease' in runTasks || 'aR' in runTasks) {
