use the new card view

--- a/gearshift/build.gradle
+++ b/gearshift/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     compile 'com.android.support:support-v4:21.0.+'
     compile "com.android.support:appcompat-v7:21.0.+"
     compile 'com.android.support:recyclerview-v7:+'
+    compile 'com.android.support:cardview-v7:+'
     compile 'com.fasterxml.jackson.core:jackson-core:2.3.0'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.3.0'
     compile 'com.fasterxml.jackson.core:jackson-annotations:2.3.0'
@@ -56,6 +57,7 @@ dependencies {
     testCompile 'com.android.support:support-v4:21.0.+'
     testCompile "com.android.support:appcompat-v7:21.0.+"
     testCompile 'com.android.support:recyclerview-v7:+'
+    testCompile 'com.android.support:cardview-v7:+'
     testCompile 'org.mockito:mockito-all:1.9.5'
     testCompile 'com.fasterxml.jackson.core:jackson-core:2.3.0'
     testCompile 'com.fasterxml.jackson.core:jackson-databind:2.3.0'
