--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,8 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.13.+'
-        classpath 'com.github.jcandksolutions.gradle:android-unit-test:1.6.+'
+        classpath 'com.android.tools.build:gradle:0.14.+'
+        //classpath 'com.github.jcandksolutions.gradle:android-unit-test:1.6.+'
     }
 }
 
