scroll to the top of the list when the profiles appear
remove gradle warnings

--- a/gearshift/build.gradle
+++ b/gearshift/build.gradle
@@ -22,10 +22,10 @@ android {
     buildTypes {
         release {
             signingConfig signingConfigs.release
-            runProguard true
+            minifyEnabled true
             // proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
             proguardFiles 'proguard-rules.txt'
-            zipAlign true
+            zipAlignEnabled true
         }
     }
     lintOptions {
