--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:0.14.+'
-        //classpath 'com.github.jcandksolutions.gradle:android-unit-test:1.6.+'
+        classpath 'com.github.jcandksolutions.gradle:android-unit-test:2.0.+'
     }
 }
 
