--- a/gearshift/build.gradle
+++ b/gearshift/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     compile 'com.fasterxml.jackson.core:jackson-core:2.3.0'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.3.0'
     compile 'com.fasterxml.jackson.core:jackson-annotations:2.3.0'
+    compile 'com.mcxiaoke.volley:library:1.+'
 }
 
 def runTasks = gradle.startParameter.taskNames
