--- a/gearshift/src/main/AndroidManifest.xml
+++ b/gearshift/src/main/AndroidManifest.xml
@@ -84,6 +84,16 @@
             android:parentActivityName="org.sugr.gearshift.ui.TorrentListActivity"
             android:theme="@style/Theme.AppCompat.Light.DialogWhenLarge" >
         </activity>
+        <activity
+            android:name="org.sugr.gearshift.ui.CrashReport"
+            android:theme="@style/AppTheme.DialogNoTitle"
+            android:textAppearance="@android:style/TextAppearance.Large"
+            android:windowSoftInputMode="stateHidden">
+            <intent-filter>
+                <action android:name="org.sugr.gearshift.CRASH_REPORT" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
 
         <meta-data
             android:name="com.google.android.backup.api_key"
