--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.14.+'
+        classpath 'com.android.tools.build:gradle:0.14.2'
         classpath 'com.github.jcandksolutions.gradle:android-unit-test:2.0.+'
     }
 }
