--- a/gearshift/build.gradle
+++ b/gearshift/build.gradle
@@ -37,11 +37,21 @@ android {
     }
 }
 
-apply plugin: 'android-unit-test'
+//apply plugin: 'android-unit-test'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
+    compile 'com.android.support:support-v4:21.0.0'
+    compile 'com.android.support:appcompat-v7:21.0.0'
+    compile 'com.android.support:recyclerview-v7:21.0.0'
+    compile 'com.android.support:cardview-v7:21.0.0'
+    compile 'com.fasterxml.jackson.core:jackson-core:2.3.0'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.3.0'
+    compile 'com.fasterxml.jackson.core:jackson-annotations:2.3.0'
+    compile 'com.mcxiaoke.volley:library:1.+'
+
+    /*
     testCompile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile files("$project.buildDir/classes/debug")
     testCompile 'junit:junit:4.8.2'
@@ -55,15 +65,7 @@ dependencies {
     testCompile 'com.fasterxml.jackson.core:jackson-core:2.3.0'
     testCompile 'com.fasterxml.jackson.core:jackson-databind:2.3.0'
     testCompile 'com.fasterxml.jackson.core:jackson-annotations:2.3.0'
-
-    compile 'com.android.support:support-v4:21.0.0'
-    compile 'com.android.support:appcompat-v7:21.0.0'
-    compile 'com.android.support:recyclerview-v7:21.0.0'
-    compile 'com.android.support:cardview-v7:21.0.0'
-    compile 'com.fasterxml.jackson.core:jackson-core:2.3.0'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.3.0'
-    compile 'com.fasterxml.jackson.core:jackson-annotations:2.3.0'
-    compile 'com.mcxiaoke.volley:library:1.+'
+    */
 }
 
 def runTasks = gradle.startParameter.taskNames
