--- a/gearshift/build.gradle
+++ b/gearshift/build.gradle
@@ -54,6 +54,13 @@ dependencies {
     compile 'com.fasterxml.jackson.core:jackson-databind:2.3.0'
     compile 'com.fasterxml.jackson.core:jackson-annotations:2.3.0'
     compile 'com.mcxiaoke.volley:library:1.+'
+
+    testCompile 'junit:junit:4.12'
+    testCompile "org.mockito:mockito-all:1.10.+"
+    testCompile('org.robolectric:robolectric:3.0-rc2') {
+        exclude group: 'commons-logging', module: 'commons-logging'
+        exclude group: 'org.apache.httpcomponents', module: 'httpclient'
+    }
 }
 
 def runTasks = gradle.startParameter.taskNames
