Make sure no errors from previous profiles creep into the current one

--- a/gearshift/build.gradle
+++ b/gearshift/build.gradle
@@ -46,10 +46,10 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'com.android.support:support-v4:22.1.+'
-    compile 'com.android.support:appcompat-v7:22.1.+'
-    compile 'com.android.support:recyclerview-v7:22.1.+'
-    compile 'com.android.support:cardview-v7:22.1.+'
+    compile 'com.android.support:support-v4:22.2.+'
+    compile 'com.android.support:appcompat-v7:22.2.+'
+    compile 'com.android.support:recyclerview-v7:22.2.+'
+    compile 'com.android.support:cardview-v7:22.2.+'
     compile 'com.fasterxml.jackson.core:jackson-core:2.3.0'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.3.0'
     compile 'com.fasterxml.jackson.core:jackson-annotations:2.3.0'
@@ -57,7 +57,7 @@ dependencies {
 
     testCompile 'junit:junit:4.12'
     testCompile "org.mockito:mockito-all:1.10.+"
-    testCompile('org.robolectric:robolectric:3.0-rc2') {
+    testCompile('org.robolectric:robolectric:3.0') {
         exclude group: 'commons-logging', module: 'commons-logging'
         exclude group: 'org.apache.httpcomponents', module: 'httpclient'
     }
