--- a/gearshift/build.gradle
+++ b/gearshift/build.gradle
@@ -8,7 +8,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 83
-        versionName "1.0-rc1"
+        versionName "1.0"
         applicationId "org.sugr.gearshift"
     }
 
