--- a/gearshift/build.gradle
+++ b/gearshift/build.gradle
@@ -23,8 +23,8 @@ android {
         release {
             signingConfig signingConfigs.release
             minifyEnabled true
-            // proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
-            proguardFiles 'proguard-rules.txt'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+            // proguardFiles 'proguard-rules.txt'
             zipAlignEnabled true
         }
     }
