--- a/gearshift/build.gradle
+++ b/gearshift/build.gradle
@@ -1,14 +1,14 @@
-apply plugin: 'android'
+apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion '23.0.0'
+    buildToolsVersion '23.0.2'
 
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 84
-        versionName "1.0"
+        versionName "1.0.2"
         applicationId "org.sugr.gearshift"
     }
 
@@ -46,14 +46,16 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'com.android.support:support-v4:23.0.+'
-    compile 'com.android.support:appcompat-v7:23.0.+'
-    compile 'com.android.support:recyclerview-v7:23.0.+'
-    compile 'com.android.support:cardview-v7:23.0.+'
+    compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.android.support:design:23.1.1'
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.fasterxml.jackson.core:jackson-core:2.3.0'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.3.0'
     compile 'com.fasterxml.jackson.core:jackson-annotations:2.3.0'
     compile 'com.mcxiaoke.volley:library:1.+'
+    compile 'com.github.zafarkhaja:java-semver:0.9.0'
 
     testCompile 'junit:junit:4.12'
     testCompile "org.mockito:mockito-all:1.10.+"
