--- a/gearshift2/build.gradle
+++ b/gearshift2/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-apply plugin: 'me.tatarka.retrolambda'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 23
@@ -24,9 +24,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+    sourceSets {
+        main.java.srcDirs += 'src/main/kotlin'
     }
 }
 
@@ -38,6 +37,7 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha1'
     compile group: 'io.reactivex', name: 'rxjava', version: '1.1.5'
     compile group: 'com.f2prateek.rx.preferences', name: 'rx-preferences', version: '1.0.1'
+    compile group: 'io.reactivex', name: 'rxkotlin', version: '0.55.0'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.6.2'
     compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.2.0'
     compile group: 'com.github.zafarkhaja', name: 'java-semver', version: '0.9.0'
@@ -46,4 +46,8 @@ dependencies {
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
     androidTestCompile 'com.android.support.test:runner:0.5'
     androidTestCompile 'com.android.support:support-annotations:23.4.0'
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
