--- a/gearshift2/build.gradle
+++ b/gearshift2/build.gradle
@@ -39,15 +39,20 @@ dependencies {
     compile group: 'com.f2prateek.rx.preferences', name: 'rx-preferences', version: '1.0.1'
     compile group: 'io.reactivex', name: 'rxkotlin', version: '0.55.0'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.6.2'
+    compile group: 'com.github.salomonbrys.kotson', name: 'kotson', version: '2.2.0'
     compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.2.0'
     compile group: 'com.github.zafarkhaja', name: 'java-semver', version: '0.9.0'
+    compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: "$kotlin_version"
+    compile group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: "$kotlin_version"
 
     testCompile 'junit:junit:4.12'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
     androidTestCompile 'com.android.support.test:runner:0.5'
     androidTestCompile 'com.android.support:support-annotations:23.4.0'
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
 }
 repositories {
     mavenCentral()
+}
+buildscript {
 }
