--- a/gearshift2/build.gradle
+++ b/gearshift2/build.gradle
@@ -30,29 +30,30 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha1'
-    compile group: 'io.reactivex', name: 'rxjava', version: '1.1.5'
-    compile group: 'com.f2prateek.rx.preferences', name: 'rx-preferences', version: '1.0.1'
-    compile group: 'io.reactivex', name: 'rxkotlin', version: '0.55.0'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.6.2'
-    compile group: 'com.github.salomonbrys.kotson', name: 'kotson', version: '2.2.0'
-    compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.2.0'
-    compile group: 'com.github.zafarkhaja', name: 'java-semver', version: '0.9.0'
+    compile 'io.reactivex:rxjava:1.1.5'
+    compile 'com.f2prateek.rx.preferences:rx-preferences:1.0.1'
+    compile 'io.reactivex:rxkotlin:0.55.0'
+    compile 'com.google.code.gson:gson:2.6.2'
+    compile 'com.github.salomonbrys.kotson:kotson:2.2.0'
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    compile 'com.github.zafarkhaja:java-semver:0.9.0'
     compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: "$kotlin_version"
     compile group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: "$kotlin_version"
-
+    compile 'com.colintmiller:simplenosql:0.5.1'
+    compile 'com.github.xmartlabs:RxSimpleNoSQL:-SNAPSHOT'
     testCompile 'junit:junit:4.12'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
     androidTestCompile 'com.android.support.test:runner:0.5'
     androidTestCompile 'com.android.support:support-annotations:23.4.0'
-
 }
 repositories {
     mavenCentral()
+    maven { url "https://jitpack.io" }
 }
 buildscript {
 }
