--- a/gearshift2/build.gradle
+++ b/gearshift2/build.gradle
@@ -13,8 +13,8 @@ android {
         applicationId "org.sugr.gearshift"
         minSdkVersion 21
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        versionCode 200
+        versionName "2.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -29,7 +29,13 @@ android {
     }
 }
 
+kapt {
+    generateStubs = true
+}
+
 dependencies {
+    kapt 'com.android.databinding:compiler:2.1.0'
+
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:support-v4:23.4.0'
