--- a/gearshift2/src/main/AndroidManifest.xml
+++ b/gearshift2/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="org.sugr.gearshift">
 
     <application android:allowBackup="true" android:icon="@mipmap/ic_launcher"
-        android:name=".App"
+        android:name="org.sugr.gearshift.App"
         android:label="@string/app_name" android:supportsRtl="true" android:theme="@style/AppTheme">
         <activity android:name=".ui.TorrentActivity" android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
