--- a/gearshift2/build.gradle
+++ b/gearshift2/build.gradle
@@ -42,8 +42,9 @@ dependencies {
     compile 'com.android.support:design:23.4.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha1'
     compile 'io.reactivex:rxjava:1.1.5'
-    compile 'com.f2prateek.rx.preferences:rx-preferences:1.0.1'
+    compile 'io.reactivex:rxandroid:1.2.0'
     compile 'io.reactivex:rxkotlin:0.55.0'
+    compile 'com.f2prateek.rx.preferences:rx-preferences:1.0.1'
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.github.salomonbrys.kotson:kotson:2.2.0'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
