--- a/gearshift2/build.gradle
+++ b/gearshift2/build.gradle
@@ -47,7 +47,8 @@ dependencies {
     compile 'com.f2prateek.rx.preferences:rx-preferences:1.0.1'
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.github.salomonbrys.kotson:kotson:2.2.0'
-    compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    compile 'com.squareup.okhttp3:okhttp:3.3.1'
+    compile group: 'com.squareup.okhttp3', name: 'logging-interceptor', version: '3.3.1'
     compile 'com.github.zafarkhaja:java-semver:0.9.0'
     compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: "$kotlin_version"
     compile group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: "$kotlin_version"
