--- a/gearshift2/src/main/AndroidManifest.xml
+++ b/gearshift2/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="org.sugr.gearshift">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application android:allowBackup="true" android:icon="@mipmap/ic_launcher"
         android:name="org.sugr.gearshift.App"
         android:label="@string/app_name" android:supportsRtl="true" android:theme="@style/AppTheme">
